Added total to cart

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -209,7 +209,7 @@ button {
   text-align: center;
 }
 
-.product-list {
+.cart-list {
   display: flex;
   flex-direction: column;
   max-width: 100%;
